Upstreamed/combine draw commands (#8)
* rename some things for clarity

* fix waterlogged glass panes (once again, but more this time) by avoiding distance sorting through
the detection of primary intersectors when geometry is intersecting and then sorting them in a fixed order

* use Mth.clamp for clarity

* refactor buffer and sort result handling, buffers are now freed immediately instead of keeping them to avoid memory usage
buffer caching would be a better solution but that's complicated and doesn't currently work correctly

* reduce number of unique triggers by around 5 percent without impacting sorting or building performance

* importantly sort a little farther away, sort tasks are fast

* use defer zero frames for important sort tasks by default

* fix build

* clarify authorship of BitArray

* fix bug with radix sort for SNR heuristic in BSP partition generating wrong indexes

* combine draw commands

* correctly reset accumulated element count

* remove draw call combining for indexed rendering as it's broken and hard to fix

* skip heuristic if there's no quads

* refactor primary intersector detection to handle large cases better,
also removed the warning message about unpartitionable geometry as it seems to not be a relevant problem

* fix topo sorting in some situations where the dot product was wrongly not recalculated when the normal is quantized.
also fixed aligned quads not receiving the more accurate center based on the average of the unique vertexes.

* reorder vertex ranges before uploaded to optimize for combined draw commands

* tune primary intersector detection to handle situations where only a small amount of geometry is intersecting

* Correctly handle colorization on NeoForge

* Combine the vertex position attributes (#2753)

This improves terrain rendering performance significantly
on Intel Xe-LP graphics under Linux.

* Add option for Fullscreen Resolution (#2642)

The resolution controls would not fit in the allocated space, so the
