@@ -1,10 +1,13 @@
 package net.caffeinemc.mods.sodium.client.gl.arena;
 
+import it.unimi.dsi.fastutil.longs.Long2ReferenceOpenHashMap;
 import net.caffeinemc.mods.sodium.client.gl.arena.staging.StagingBuffer;
 import net.caffeinemc.mods.sodium.client.gl.buffer.GlBuffer;
 import net.caffeinemc.mods.sodium.client.gl.buffer.GlBufferUsage;
 import net.caffeinemc.mods.sodium.client.gl.buffer.GlMutableBuffer;
 import net.caffeinemc.mods.sodium.client.gl.device.CommandList;
+import net.jpountz.xxhash.XXHash64;
+import net.jpountz.xxhash.XXHashFactory;
 
 import java.nio.ByteBuffer;
 import java.util.ArrayList;
@@ -26,12 +29,17 @@ public class GlBufferArena {
 
     private GlBufferSegment head;
 
-    private int capacity;
-    private int used;
+    private static final XXHash64 NATIVE_HASH = XXHashFactory.fastestInstance().hash64();
+    private static final XXHash64 JAVA_HASH = XXHashFactory.fastestJavaInstance().hash64();
+    private static final int NATIVE_HASH_BYTES_THRESHOLD = 512; // TODO: tune this?
+    private final Long2ReferenceOpenHashMap<GlBufferSegment> cache;
+
+    private long capacity;
+    private long used;
 
     private final int stride;
 
-    public GlBufferArena(CommandList commands, int initialCapacity, int stride, StagingBuffer stagingBuffer) {
+    public GlBufferArena(CommandList commands, int initialCapacity, int stride, StagingBuffer stagingBuffer, boolean enableCache) {
         this.capacity = initialCapacity;
         this.resizeIncrement = initialCapacity / 16;
 
@@ -44,16 +52,22 @@ public class GlBufferArena {
         commands.allocateStorage(this.arenaBuffer, this.capacity * stride, BUFFER_USAGE);
 
         this.stagingBuffer = stagingBuffer;
+
+        if (enableCache) {
+            this.cache = new Long2ReferenceOpenHashMap<>();
+        } else {
+            this.cache = null;
+        }
     }
 
-    private void resize(CommandList commandList, int newCapacity) {
+    private void resize(CommandList commandList, long newCapacity) {
         if (this.used > newCapacity) {
             throw new UnsupportedOperationException("New capacity must be larger than used size");
         }
 
         this.checkAssertions();
 
-        int tail = newCapacity - this.used;
+        long tail = newCapacity - this.used;
 
         List<GlBufferSegment> usedSegments = this.getUsedSegments();
         List<PendingBufferCopyCommand> pendingCopies = this.buildTransferList(usedSegments, tail);
@@ -66,7 +80,7 @@ public class GlBufferArena {
         if (usedSegments.isEmpty()) {
             this.head.setNext(null);
         } else {
-            this.head.setNext(usedSegments.get(0));
+            this.head.setNext(usedSegments.getFirst());
             this.head.getNext()
                     .setPrev(this.head);
         }
@@ -74,23 +88,23 @@ public class GlBufferArena {
         this.checkAssertions();
     }
 
-    private List<PendingBufferCopyCommand> buildTransferList(List<GlBufferSegment> usedSegments, int base) {
+    private List<PendingBufferCopyCommand> buildTransferList(List<GlBufferSegment> usedSegments, long base) {
         List<PendingBufferCopyCommand> pendingCopies = new ArrayList<>();
         PendingBufferCopyCommand currentCopyCommand = null;
 
-        int writeOffset = base;
+        long writeOffset = base;
 
         for (int i = 0; i < usedSegments.size(); i++) {
             GlBufferSegment s = usedSegments.get(i);
 
-            if (currentCopyCommand == null || currentCopyCommand.readOffset + currentCopyCommand.length != s.getOffset()) {
+            if (currentCopyCommand == null || currentCopyCommand.getReadOffset() + currentCopyCommand.getLength() != s.getOffset()) {
                 if (currentCopyCommand != null) {
                     pendingCopies.add(currentCopyCommand);
                 }
 
                 currentCopyCommand = new PendingBufferCopyCommand(s.getOffset(), writeOffset, s.getLength());
             } else {
-                currentCopyCommand.length += s.getLength();
+                currentCopyCommand.setLength(currentCopyCommand.getLength() + s.getLength());
             }
 
             s.setOffset(writeOffset);
@@ -117,7 +131,11 @@ public class GlBufferArena {
         return pendingCopies;
     }
 
-    private void transferSegments(CommandList commandList, Collection<PendingBufferCopyCommand> list, int capacity) {
+    private void transferSegments(CommandList commandList, Collection<PendingBufferCopyCommand> list, long capacity) {
+        if (capacity >= (1L << 32)) {
+            throw new IllegalArgumentException("Maximum arena buffer size is 4 GiB");
+        }
+
         GlMutableBuffer srcBufferObj = this.arenaBuffer;
         GlMutableBuffer dstBufferObj = commandList.createMutableBuffer();
 
@@ -125,9 +143,9 @@ public class GlBufferArena {
 
         for (PendingBufferCopyCommand cmd : list) {
             commandList.copyBufferSubData(srcBufferObj, dstBufferObj,
-                    cmd.readOffset * this.stride,
-                    cmd.writeOffset * this.stride,
-                    cmd.length * this.stride);
+                    cmd.getReadOffset() * this.stride,
+                    cmd.getWriteOffset() * this.stride,
+                    cmd.getLength() * this.stride);
         }
 
         commandList.deleteBuffer(srcBufferObj);
@@ -153,11 +171,11 @@ public class GlBufferArena {
         return used;
     }
 
-    public int getDeviceUsedMemory() {
+    public long getDeviceUsedMemory() {
         return this.used * this.stride;
     }
 
-    public int getDeviceAllocatedMemory() {
+    public long getDeviceAllocatedMemory() {
         return this.capacity * this.stride;
     }
 
@@ -222,6 +240,10 @@ public class GlBufferArena {
             throw new IllegalStateException("Already freed");
         }
 
+        if (entry.isHashed()) {
+            this.cache.remove(entry.getHash());
+        }
+
         entry.setFree(true);
 
         this.used -= entry.getLength();
@@ -261,7 +283,7 @@ public class GlBufferArena {
         // A linked list is used as we'll be randomly removing elements and want O(1) performance
         List<PendingUpload> queue = stream.collect(Collectors.toCollection(LinkedList::new));
 
-        // Try to upload all of the data into free segments first
+        // Try to upload all the data into free segments first
         this.tryUploads(commandList, queue);
 
         // If we weren't able to upload some buffers, they will have been left behind in the queue
@@ -293,16 +315,44 @@ public class GlBufferArena {
         this.stagingBuffer.flush(commandList);
     }
 
+    private long getBufferHash(ByteBuffer data) {
+        var seed = System.identityHashCode(this);
+        var length = data.remaining();
+        if (length < NATIVE_HASH_BYTES_THRESHOLD) {
+            return JAVA_HASH.hash(data, 0, length, seed);
+        } else {
+            return NATIVE_HASH.hash(data, 0, length, seed);
+        }
+    }
+
     private boolean tryUpload(CommandList commandList, PendingUpload upload) {
-        ByteBuffer data = upload.getDataBuffer()
-                .getDirectBuffer();
+        ByteBuffer data = upload.getDataBuffer().getDirectBuffer();
 
         int elementCount = data.remaining() / this.stride;
+
+        // return a buffer segment with the same content if there is one based on the hash of the incoming content
+        GlBufferSegment matchingSegment = null;
+        long hash = 0;
+        if (this.cache != null) {
+            hash = this.getBufferHash(data);
+            matchingSegment = this.cache.get(hash);
+        }
+        if (matchingSegment != null) {
+            upload.setResult(matchingSegment);
+            matchingSegment.addRef();
+            return true;
+        }
 
         GlBufferSegment dst = this.alloc(elementCount);
 
         if (dst == null) {
             return false;
+        }
+
+        // if a new segment was needed (cache miss), set the calculated hash on the segment
+        if (this.cache != null) {
+            dst.setHash(hash);
+            this.cache.put(hash, dst);
         }
 
         // Copy the data into our staging buffer, then copy it into the arena's buffer
@@ -313,11 +363,11 @@ public class GlBufferArena {
         return true;
     }
 
-    public void ensureCapacity(CommandList commandList, int elementCount) {
+    public void ensureCapacity(CommandList commandList, long elementCount) {
         // Re-sizing the arena results in a compaction, so any free space in the arena will be
         // made into one contiguous segment, joined with the new segment of free space we're asking for
         // We calculate the number of free elements in our arena and then subtract that from the total requested
-        int elementsNeeded = elementCount - (this.capacity - this.used);
+        long elementsNeeded = elementCount - (this.capacity - this.used);
 
         // Try to allocate some extra buffer space unless this is an unusually large allocation
         this.resize(commandList, Math.max(this.capacity + this.resizeIncrement, this.capacity + elementsNeeded));
@@ -331,7 +381,7 @@ public class GlBufferArena {
 
     private void checkAssertions0() {
         GlBufferSegment seg = this.head;
-        int used = 0;
+        long used = 0;
 
         while (seg != null) {
             if (seg.getOffset() < 0) {
